@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-{% for page in pages %}
-<url>
-<loc>http://{{ hostname }}{{ page.title|pageurl }}</loc>
-{% if page.updated %}
-<lastmod>{{ page.updated|date:"Y-m-d" }}</lastmod>
-{% endif %}
-</url>
+{% for page in pages %}<url>
+<loc>{{ base }}{{ page.title|pageurl }}</loc>
+{% if page.updated %}<lastmod>{{ page.updated|date:"Y-m-d" }}</lastmod>
+{% endif %}</url>
 {% endfor %}
 </urlset>
